fixed spacing errors with navbar

--- a/memory-game/src/components/Navbar/style.css
+++ b/memory-game/src/components/Navbar/style.css
@@ -14,9 +14,4 @@
 nav, section {
     display: block;
 } 
-/* 
-.container {
-    width: 100%;
-    white-space: nowrap;
 
-} */
